tests/NormalTests/paczka1/fuzzy1/21175871.err
Error in line 4: 6e3cJ A679 7,5
Error in line 6: f7Qv15wcgfm A679 50,4
Error in line 12: f7Qv15wcgfm A713 94,7
Error in line 10: A713 A679 78,7
Error in line 21: mJCSog A679 55,5
